[gd_scene load_steps=4 format=3 uid="uid://wjgxgtqn7gwh"]

[ext_resource type="Script" path="res://scripts/main-menu.gd" id="1_n78kf"]
[ext_resource type="Texture2D" uid="uid://b8355e2ehjsqf" path="res://scenes/ui/yggdrasil-tree-of-life-celtic-symbol-nature-nordic-sticker.png" id="1_shysx"]
[ext_resource type="FontFile" uid="uid://wrhtnsje2mdt" path="res://assets/ui/fonts/Caesar_Dressing/CaesarDressing-Regular.ttf" id="3_vcdub"]

[node name="MainMenu" type="Node2D"]
position = Vector2(0, -2)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(278, 277)
texture = ExtResource("1_shysx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n78kf")

[node name="NewGameButton" type="Button" parent="Control"]
offset_left = 713.0
offset_top = 12.0
offset_right = 1029.0
offset_bottom = 99.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/NewGameButton"]
offset_left = 120.0
offset_top = 30.0
offset_right = 210.0
offset_bottom = 59.0
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("3_vcdub")
bbcode_enabled = true
text = "[url=new_game]New Game[/url]"

[node name="ContinueButton" type="Button" parent="Control"]
offset_left = 713.0
offset_top = 121.0
offset_right = 1029.0
offset_bottom = 208.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ContinueButton"]
offset_left = 120.0
offset_top = 30.0
offset_right = 196.0
offset_bottom = 55.0
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("3_vcdub")
bbcode_enabled = true
text = "[url=continue]Continue[/url]"

[node name="ShopButton" type="Button" parent="Control"]
offset_left = 714.0
offset_top = 232.0
offset_right = 1030.0
offset_bottom = 319.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ShopButton"]
offset_left = 138.0
offset_top = 33.0
offset_right = 174.0
offset_bottom = 60.0
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("3_vcdub")
bbcode_enabled = true
text = "[url=shop]Shop[/url]"

[node name="SettingsButton" type="Button" parent="Control"]
offset_left = 713.0
offset_top = 343.0
offset_right = 1029.0
offset_bottom = 430.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/SettingsButton"]
offset_left = 126.0
offset_top = 30.0
offset_right = 187.0
offset_bottom = 59.0
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("3_vcdub")
bbcode_enabled = true
text = "[url=settings]Settings[/url]"

[node name="QuitButton" type="Button" parent="Control"]
offset_left = 713.0
offset_top = 452.0
offset_right = 1029.0
offset_bottom = 539.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/QuitButton"]
offset_left = 120.0
offset_top = 30.0
offset_right = 205.0
offset_bottom = 59.0
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("3_vcdub")
bbcode_enabled = true
text = "[url=quit]Quit Game[/url]"
